--- a/all/themes/hso_theme/less/node-webform.less
+++ b/all/themes/hso_theme/less/node-webform.less
@@ -133,6 +133,12 @@
     body.excollege_section & {
       .specific-webform-client-form(@hso-executive);
     }
+    body.lccollege_section & {
+      .specific-webform-client-form(@hso-learncoach);
+    }
+    body.langcollege_section & {
+      .specific-webform-client-form(@hso-sprachen);
+    }
   }
 }
 
