- menu layout adapted to new content

--- a/all/themes/hso_theme/less/menu-main.less
+++ b/all/themes/hso_theme/less/menu-main.less
@@ -258,7 +258,7 @@
 }
 #block-menu-block-1 li.double .view-content-right {
   /* aligns top of sub-columns */
-  padding-top: 33px;
+  //padding-top: 33px;
 }
 
 /*
