--- a/all/themes/hso_theme/less/global.less
+++ b/all/themes/hso_theme/less/global.less
@@ -16,7 +16,7 @@
 
 // Content types
 @import "node-course";
-//@import "node-news";
+@import "node-news";
 @import "node-location";
 //@import "node-media";
 //@import "node-video";
@@ -34,8 +34,8 @@
 
 // top menu pages
 @import "hso-page-tabs-block";
-//@import "page-witercho-blog";
-//@import "pane-witercho-blog-tabs";
+@import "page-witercho-blog";
+@import "pane-witercho-blog-tabs";
 //@import "bildungsnavigator";
 
 // course time search page
@@ -56,14 +56,14 @@
 // sidebar blocks
 @import "block-call2action";
 //@import "block-hso-tv";
-//@import "block-witercho-blog";
+@import "block-witercho-blog";
 @import "block-tweets";
 @import "block-facebook";
 //@import "block-twitter-views";
-//@import "block-fachwissen";
+@import "block-fachwissen";
 @import "block-about-author";
 @import "block-contacts";
-//@import "block-tag-cloud";
+@import "block-tag-cloud";
 //@import "block-videos";
 @import "block-words-cloud";
 
