--- a/all/themes/hso_theme/less/pane-witercho-blog-tabs.less
+++ b/all/themes/hso_theme/less/pane-witercho-blog-tabs.less
@@ -20,6 +20,8 @@
   background: url(../images/hso_bg_tabs.jpg) no-repeat 0 20px;
 
   .item-list {
+    display: none;
+
     ul {
       #hso-mixins.no-list-style;
 
