--- a/all/themes/hso_theme/less/block-witercho-blog.less
+++ b/all/themes/hso_theme/less/block-witercho-blog.less
@@ -41,7 +41,7 @@
     color: #fff;
     line-height: 20px;
     border-bottom: 1px solid #fff;
-    background: #e40421 url(../images/blog_icon.png) no-repeat 12px 18px;
+    background: @branding-bg url(../images/blog_icon.png) no-repeat 12px 18px;
   }
 
   .pane-title {
@@ -139,6 +139,12 @@ body.responsive-layout-mobile.front {
   }
   body.excollege_section & {
     .specific-mini-segment-blog(@hso-executive; #e7e5de; url(../images/ex_blog.png); #ccc7bd);
+  }
+  body.lccollege_section & {
+    .specific-mini-segment-blog(@hso-learncoach; @hso-learncoach; none; lighten(@hso-learncoach, 15%));
+  }
+  body.langcollege_section & {
+    .specific-mini-segment-blog(@hso-sprachen; @hso-sprachen; none; lighten(@hso-sprachen, 15%));
   }
 }
 
