--- a/all/themes/hso_theme/less/scrolling-course-tabs-block.less
+++ b/all/themes/hso_theme/less/scrolling-course-tabs-block.less
@@ -184,6 +184,12 @@
               white-space: nowrap;
               line-height: 25px;
             }
+
+            .views-field-field-brand {
+              vertical-align: middle;
+              text-align: center;
+            }
+
           }
         }
       }
