--- a/all/themes/hso_theme/less/block-contacts.less
+++ b/all/themes/hso_theme/less/block-contacts.less
@@ -54,6 +54,7 @@
   .content {
     ul.header_links {
       #hso-mixins.no-list-style();
+      display: none;
       margin: 0 0 20px;
 
       li {
