--- a/all/themes/hso_theme/less/footer-blocks.less
+++ b/all/themes/hso_theme/less/footer-blocks.less
@@ -27,6 +27,7 @@
 }
 
 .fb-social(@pos-x: 0) {
+  margin: 0 5px;
   background-position: @pos-x 0;
   &:hover {background-position: @pos-x -36px;}
 }
@@ -35,6 +36,7 @@
 // General settings
 // -------------------------
 #zone-footer-wrapper {
+  margin-top: 50px;
   border-top: 50px solid @fb-border-color;
 
   #block-nodeblock-1049,
