- brochure form in sidebar implemented - brochure download form implemented - db updated

--- a/all/themes/hso_theme/less/global.less
+++ b/all/themes/hso_theme/less/global.less
@@ -55,6 +55,7 @@
 
 // sidebar blocks
 @import "block-call2action";
+@import "block-prospekt";
 //@import "block-hso-tv";
 @import "block-witercho-blog";
 @import "block-tweets";
