--- a/all/themes/hso_theme/less/node-webform.less
+++ b/all/themes/hso_theme/less/node-webform.less
@@ -95,7 +95,7 @@
       input.form-text,
       select.form-select {
         padding: 0 5px;
-        width: 400px;
+        width: 50%;
         height: 30px;
         font-family: @font-family-light;
         font-size: 14px;
@@ -103,7 +103,7 @@
         border: 1px solid #dbdbdb;
       }
       select.form-select {
-        width: 120px;
+        min-width: 120px;
       }
     }
 
