--- a/all/themes/hso_theme/css/global.css
+++ b/all/themes/hso_theme/css/global.css
@@ -1468,7 +1468,7 @@ body.node-type-news .node.node-news .with_picture .block-hso-mods ul li a:hover 
 .node-webform form.webform-client-form .webform-container-inline input.form-text,
 .node-webform form.webform-client-form .webform-container-inline select.form-select {
   padding: 0 5px;
-  width: 400px;
+  width: 50%;
   height: 30px;
   font-family: 'Soho Gothic W01 Light', sans-serif;
   font-size: 14px;
@@ -1476,7 +1476,7 @@ body.node-type-news .node.node-news .with_picture .block-hso-mods ul li a:hover 
   border: 1px solid #dbdbdb;
 }
 .node-webform form.webform-client-form .webform-container-inline select.form-select {
-  width: 120px;
+  min-width: 120px;
 }
 .node-webform form.webform-client-form .form-actions .form-submit {
   margin: 10px 0;
@@ -3262,6 +3262,77 @@ body.lccollege_section #block-system-main a.call2action {
   body.lccollege_section #region-sidebar-second a.call2action {
     background-position: 0 -408px;
   }
+}
+/*
+ *  Prospekt-block component
+ * --------------------------------------------------*/
+#block-webform-client-block-7300 {
+  margin-bottom: 20px;
+}
+#block-webform-client-block-7300 h2.block-title {
+  padding: 15px 15px 15px 40px;
+  height: 20px;
+  font-size: 17px;
+  color: #fff;
+  line-height: 20px;
+}
+#block-webform-client-block-7300 #webform-client-form-7300 {
+  padding: 0 15px;
+  border: 1px solid #ddd;
+  border-top-color: #fff;
+}
+#block-webform-client-block-7300 #webform-client-form-7300 .webform-component > label {
+  display: inline-block;
+  margin-right: 0;
+  width: 80px;
+}
+#block-webform-client-block-7300 #webform-client-form-7300 .webform-component input.form-text {
+  width: 60%;
+}
+#block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  margin: 10px 0;
+  padding: 0 20px;
+  height: 35px;
+  font-family: 'Soho Gothic W01 Regular', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #fff;
+  background: #7c1d19;
+  border: none;
+}
+body.kvcollege_section #block-webform-client-block-7300 h2.block-title {
+  background: #94ba40 no-repeat 0 0;
+  padding-left: 20px;
+}
+body.kvcollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  background-color: #94ba40;
+}
+body.hscollege_section #block-webform-client-block-7300 h2.block-title {
+  background: #e77431 no-repeat 0 0;
+  padding-left: 20px;
+}
+body.hscollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  background-color: #e77431;
+}
+body.kscollege_section #block-webform-client-block-7300 h2.block-title {
+  background: #78729e no-repeat 0 0;
+  padding-left: 20px;
+}
+body.kscollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  background-color: #78729e;
+}
+body.excollege_section #block-webform-client-block-7300 h2.block-title {
+  background: #b1a896 no-repeat 0 0;
+  padding-left: 20px;
+}
+body.excollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  background-color: #b1a896;
+}
+body.langcollege_section #block-webform-client-block-7300 h2.block-title {
+  background: #005799 no-repeat 0 0;
+  padding-left: 20px;
+}
+body.langcollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  background-color: #005799;
 }
 /*
  *  Witercho sidebar block component (mini-home-blog)
