- color learn-coaching added in prospect block

--- a/all/themes/hso_theme/less/block-prospekt.less
+++ b/all/themes/hso_theme/less/block-prospekt.less
@@ -82,6 +82,9 @@
   body.excollege_section & {
     .specific-webform-block(@hso-executive);
   }
+  body.lccollege_section & {
+    .specific-webform-block(@hso-learncoach);
+  }
   body.langcollege_section & {
     .specific-webform-block(@hso-sprachen);
   }
