--- a/all/themes/hso_theme/css/global.css
+++ b/all/themes/hso_theme/css/global.css
@@ -3327,6 +3327,13 @@ body.excollege_section #block-webform-client-block-7300 h2.block-title {
 body.excollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
   background-color: #b1a896;
 }
+body.lccollege_section #block-webform-client-block-7300 h2.block-title {
+  background: #009251 no-repeat 0 0;
+  padding-left: 20px;
+}
+body.lccollege_section #block-webform-client-block-7300 #webform-client-form-7300 .form-actions .form-submit {
+  background-color: #009251;
+}
 body.langcollege_section #block-webform-client-block-7300 h2.block-title {
   background: #005799 no-repeat 0 0;
   padding-left: 20px;
