--- a/all/themes/hso_theme/css/global.css
+++ b/all/themes/hso_theme/css/global.css
@@ -11,7 +11,7 @@ html.js #block-menu-block-1 div.contextual-links-wrapper {
 body {
   font-family: 'Soho Gothic W01 Light', sans-serif;
   font-size: 15px;
-  color: #000000;
+  color: #000;
 }
 body.page-blog h1#page-title,
 body.page-taxonomy-term h1#page-title {
@@ -438,8 +438,8 @@ body.responsive-layout-mobile #region-branding #menu_appended.hover .wrapper #bl
   left: -29px;
   border-left: 14px solid transparent;
   border-top: 15px solid transparent;
-  border-bottom: 15px solid #ffffff;
-  border-right: 15px solid #ffffff;
+  border-bottom: 15px solid #fff;
+  border-right: 15px solid #fff;
 }
 #main_top_banners .mask.first {
   right: auto;
@@ -450,7 +450,7 @@ body.responsive-layout-mobile #region-branding #menu_appended.hover .wrapper #bl
   left: auto;
   right: -30px;
   border-right: 16px solid transparent;
-  border-left: 15px solid #ffffff;
+  border-left: 15px solid #fff;
 }
 /*
  *  Main-menu component
@@ -2938,7 +2938,7 @@ body.page-node-anmeldung .pane-custom iframe {
   margin: 20px 0;
   width: 100%;
   height: 400px;
-  background: #ffffff url("ajax-loader.gif") no-repeat 50% 0;
+  background: #fff url("ajax-loader.gif") no-repeat 50% 0;
 }
 body.page-node-anmeldung .pane-custom iframe#if-anmeldung {
   min-height: 1600px;
@@ -2947,7 +2947,7 @@ body.page-node-anmeldung .pane-custom iframe#if-anmeldung {
   margin: 20px 0;
   width: 100%;
   height: 400px;
-  background: #ffffff url("ajax-loader.gif") no-repeat 50% 0;
+  background: #fff url("ajax-loader.gif") no-repeat 50% 0;
 }
 .node-remote-form iframe#if-anfrage {
   min-height: 1400px;
@@ -3996,7 +3996,7 @@ body.langcollege_section .block-views-contacts-block-course-contacts .content ul
 .word-cloud-block .field-name-body a,
 .word-cloud-block .field-name-body a:visited,
 .word-cloud-block .field-name-body a:active {
-  color: #e40421;
+  color: #E40421;
   text-decoration: none;
 }
 .word-cloud-block .field-name-body span:hover,
